Fixed Logout button text not showing. Adjusted Token handling when pulling from async storage to keep it as text

--- a/src/components/Navigation/Toolbar/Toolbar.scss
+++ b/src/components/Navigation/Toolbar/Toolbar.scss
@@ -1,10 +1,13 @@
+
+@import '../../../constants/theme';
+
 .Toolbar{
     height: 52px;
     width: 100%;
     position:fixed;
     top:0;
     left:0;
-    background-color: #ffffff;
+    background-color: $secondary;
     display: flex;
     justify-content: left;
     align-items: center;
@@ -22,10 +25,10 @@
 }
 
 .ButtonCSS{
-    background-color: #003054;
+    background-color: $primary;
     border: none;
-    color: #fff;
-    outline: #003054;
+    color: $secondary;
+    outline: $primary;
     font: inherit;
     padding: 10px;
     margin: 4px;
@@ -36,10 +39,17 @@
     border-radius: 4px;
     right: 0;
     position:fixed;
+    font-size: 14px;
 }
 
 .ButtonCSS:hover{
     cursor: pointer;
+}
+
+.buttonText{
+    color: $secondary;
+    font-size: 16px;
+    padding: 4px;
 }
 
 .ButtonMobileCSS{
